--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,7 +6,7 @@
       <%= devise_error_messages! %>
       <div class="form-group">
         <%= f.label :username %>
-        <%= f.text_field :name, autofocus: true, class: 'form-control', placeholder: "Enter username" %>
+        <%= f.text_field :username, autofocus: true, class: 'form-control', placeholder: "Enter username" %>
       </div>
       <div class="form-group">
         <%= f.label :email %>
