Checkpoint 8 completed, Private Wikis

--- a/app/views/wikis/edit.html.erb
+++ b/app/views/wikis/edit.html.erb
@@ -12,8 +12,8 @@
         <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter wiki body" %>
       </div>
       <div class="form-group">
-        <%= f.submit "Save", class: 'btn btn-success' %>
+        <%= render partial: 'form' %>
       </div>
     <% end %>
   </div>
-</div>    
+</div>
