--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -6,6 +6,6 @@
   <% end %>
 <div class="col-md-4">
   <% if policy(@wiki).destroy? %>
-    <%= link_to "Delete Topic", @wiki, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this topic?' } %>
+    <%= link_to "Delete Wiki", @wiki, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this topic?' } %>
   <% end %>
 </div>
