--- a/app/views/wikis/edit.html.erb
+++ b/app/views/wikis/edit.html.erb
@@ -7,13 +7,50 @@
         <%= f.label :title %>
         <%= f.text_field :title, class: 'form-control', placeholder: "Enter wiki title" %>
       </div>
+
       <div class="form-group">
         <%= f.label :body %>
         <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter wiki body" %>
       </div>
+
+      <% if current_user.role == 'admin' || current_user.role == 'premium' %>
+        <div class="form-group">
+          <%= f.label :private, class: 'checkbox' do %>
+            <%= f.check_box :private %> Private wiki
+          <% end %>
+        </div>
+      <% end %>
+
       <div class="form-group">
-        <%= render partial: 'form' %>
+        <%= f.submit "Save", class: 'btn btn-success' %>
       </div>
     <% end %>
+
+    <% @wiki.collaborators.each do |collab| %>
+      <p><%= collab.user.email %></p>
+    <% end %>
+
+    <%= form_tag collaborators_path do %>
+      <%= hidden_field_tag :wiki_id, @wiki.id %>
+
+      <div class="form-group">
+        <%= select_tag :user_id, options_from_collection_for_select(@available_users, :id, :email) %>
+      </div>
+
+      <div class="form-group">
+        <%= submit_tag "Add", class: 'btn btn-success' %>
+      </div>
+    <% end %>
+
+    <%= render partial: 'remove' %>
+    <!-- <div class="form-group">
+      <%= select_tag :user_id, options_from_collection_for_select(@wiki.collaborators, :id, :user_email) %>
+
+      <% if policy(@wiki).destroy? %>
+        <%= link_to "Delete Collaborator", @collaborator, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this collaborator?' } %>
+    </div>
+      <% end %> -->
+
+
   </div>
 </div>
